[project]
name = "talk-with-document"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pdfplumber>=0.11.7",
    "pymongo[srv]==3.12",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
    "typing>=3.10.0.0",
]
