[project]
name = "talk-with-document"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub[hf-xet]>=0.34.4",
    "pdfplumber>=0.11.7",
    "pymongo[srv]==3.12",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
    "smolagents[litellm]>=1.21.1",
    "streamlit>=1.49.0",
    "typing>=3.10.0.0",
]
